--- a/README.me
+++ b/README.me
@@ -65,7 +65,7 @@ npm install
 
 ---
 
-## ▶Ejecución
+## Ejecución
 
 Necesitas dos terminales corriendo simultáneamente:
 
@@ -82,11 +82,3 @@ cd client
 npm run dev
 
 *La aplicación abrirá en: http://localhost:5173*
-
----
-
-## Características
-
-* **Proxy API:** El frontend no expone la API Key; todas las peticiones pasan por el servidor Hono.
-* **Persistencia:** Las reseñas se guardan permanentemente en PostgreSQL.
-* **Diseño:** Interfaz moderna y responsive usando TailwindCSS v4.
